applications/to-do-app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
