applications/to-do-app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo-app
  namespace: default
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: kgateway-system
  hostnames:
    - "todo.lab.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: todo-app
          port: 3000
